pick_word function changed after review

--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1039,8 +1039,7 @@
     "    :return: String of the predicted word\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    idx = np.argmin(probabilities)\n",
-    "    return int_to_vocab.get(idx)\n",
+    "    return int_to_vocab[np.random.choice(range(len(probabilities)), p=probabilities)]\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -1062,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1073,7 +1072,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "moe_szyslak: beginning fourth mail louie: suppose wondering duff_announcer: intrigued agent_miller: genius stillwater: drown nascar bleeding follow nope laid suppose beauty sweetheart nope freak dreamed nope nope nope sweetheart freaking carlotta: reminded artie_ziff: nope freaking hurry steamed knockin' nope aww original fighting laid retain fell sweetheart original alls intrigued fourth yells fat_tony: medical yells freak yells combination original manjula suppose weirder laid promised knockin' nope promised knockin' medical feed spending freak nope nope laid original promised promised knockin' closer fat_tony: single promised yells original promised pointed freak freak freak suppose fabulous guttural nope yells fat_tony: realize suppose supposed nope promised knockin' pridesters: chuckling suppose eaten eaten clears bid learned steamed agent_miller: suppose eaten single promised busted retain young_marge: eaten suppose suppose falsetto coherent sweetheart eaten favor jacques: runs medical nope nope shan't suppose suppose suppose menlo honored nope promised shoots sweetheart original founded promised stage original renew laid sweetheart promised busted laid original medical soap cleveland man_with_crazy_beard: medical losing nope intelligent nope waitin' waitin' sweetheart nope nope nope busted freak nope freak intelligent freak suppose menlo weirder nope nope nope nope nope steamed nope knockin' eaten nope freaking nope nope pleading original promised fourth scientists skydiving man_with_crazy_beard: laid menlo deserve nope nope\n"
+      "moe_szyslak: aw jeez, i gotta say the years seats he read an application?(chuckles) can i show off me really back!\n",
+      "\n",
+      "\n",
+      "patrons:(talk-sings) great\" my precious drinkin'.\n",
+      "moe_szyslak: uh, the castle is!\n",
+      "homer_simpson:(super mother) oh, why don't you are the wrong of hurt, loud.\n",
+      "homer_simpson: barney are you thinking!\n",
+      "homer_simpson: america.\n",
+      "jacques: wow! i'll help me a boat\n",
+      "moe_szyslak:...\n",
+      "carl_carlson:(\" lenny so slick\". oh, wait is my peach are hurt. give me all close.\n",
+      "moe_szyslak:(very self-satisfied) that is a barter here for homer simpson.\n",
+      "moe_szyslak:(pissed) oh, right! bart! hold up bless me as a beer.\n",
+      "moe_szyslak: aw, moe's tavern, huh. like the foibles you gave to see certified.\n",
+      "homer_simpson: hey, knock it off... ehhhhhh don't get up with the beer and they'll, this is a new little secrets, here.(lying) you let me\n"
      ]
     }
    ],
@@ -1140,21 +1153,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
